@@ -64,8 +64,19 @@ struct ElementStat
   fixed time_started;
   /** Time (s) since element was started */
   fixed time_elapsed;
-  /** Time (s) to element completion */
-  fixed time_remaining;
+
+  /**
+   * Time (s) remaining to element completion from now, including the
+   * time to reach the start point (if task was not yet started).
+   */
+  fixed time_remaining_now;
+
+  /**
+   * Time (s) remaining to element completion, counted from the start
+   * of the task.
+   */
+  fixed time_remaining_start;
+
   /** Time (s) of overall element */
   fixed time_planned;
 
@@ -101,10 +112,12 @@ struct ElementStat
   /**
    * Calculate element times
    *
+   * @param until_start_s the estimated time until the task start will
+   * be reached [s]; zero if the task has already started
    * @param ts Start time of this element (s)
    * @param state Aircraft state (to access time)
    */
-  void SetTimes(const fixed ts, const AircraftState& state);
+  void SetTimes(fixed until_start_s, fixed ts, const AircraftState &state);
 
   /**
    * Determine whether the task (or subtask) is able to be finished
